--- a/WhisperApi.csproj
+++ b/WhisperApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>36fc224b-55ee-474d-be3a-a6b8e16fa768</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
